--- a/myapp/package.json
+++ b/myapp/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/malaksoubai/pearl-hacks-25#readme",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.21.2"
   }
